--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.0",
@@ -32,6 +33,7 @@
     "bull": "^4.10.4",
     "dayjs": "^1.11.2",
     "mongoose": "^6.10.0",
+    "mongoose-paginate-v2": "^1.7.1",
     "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
