Added new fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       context: .
     networks:
       - steam-csgo-checker
+    volumes:
+      - ./logs:/usr/src/app/logs
     environment:
       - TZ=Europe/Kiev
     env_file:
