--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/mongoose": "^9.2.1",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.3.9",
     "@nestjs/schedule": "^2.2.0",
     "axios": "^1.3.4",
     "bull": "^4.10.4",
